[gd_scene load_steps=25 format=3 uid="uid://cb0mhr55ehsbc"]

[ext_resource type="Script" path="res://data/scenes/imp.gd" id="1_b2iwc"]
[ext_resource type="Material" uid="uid://caabkyh33pd4j" path="res://data/shader/NokiaMaterial.tres" id="2_3bvpw"]
[ext_resource type="Texture2D" uid="uid://b4ye4pxy0vayx" path="res://data/sprites/SpriteSheet.png" id="3_c7c64"]
[ext_resource type="Script" path="res://data/nodes/health.gd" id="4_jt7pj"]
[ext_resource type="Script" path="res://data/nodes/damage_target.gd" id="5_xqqjs"]
[ext_resource type="Material" uid="uid://yudv6e212hb6" path="res://data/shader/NokiaMaterial_Inverted.tres" id="6_ot5jj"]
[ext_resource type="Script" path="res://data/heartBeast/FiniteStateMachine/finite_state_machine.gd" id="7_8s12j"]
[ext_resource type="Script" path="res://data/scenes/SearchForMineTarget.gd" id="8_34mra"]
[ext_resource type="Script" path="res://data/scenes/MoveToLocation.gd" id="9_w8esl"]
[ext_resource type="Script" path="res://data/scenes/MoveToLocationState_Adjacent.gd" id="11_heavk"]
[ext_resource type="Script" path="res://data/scenes/MoveNearby.gd" id="11_ob580"]
[ext_resource type="Script" path="res://data/scenes/FogOfWarRemover.gd" id="12_pwx5h"]
[ext_resource type="Script" path="res://data/scenes/SearchForClaimTarget.gd" id="12_tpm0u"]
[ext_resource type="Texture2D" uid="uid://dfvdh4wr04crh" path="res://data/sprites/tiles/claim-border.png" id="13_l7oc8"]
[ext_resource type="Script" path="res://data/scenes/Mine.gd" id="13_rcxdl"]
[ext_resource type="Script" path="res://data/scenes/Claim.gd" id="13_ykhsw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5edl3"]
atlas = ExtResource("3_c7c64")
region = Rect2(48, 64, 8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1e5q4"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_80uq6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_3bvpw")]
}

[sub_resource type="Animation" id="Animation_fgv7d"]
resource_name = "damaged"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_3bvpw"), ExtResource("6_ot5jj"), ExtResource("2_3bvpw"), ExtResource("6_ot5jj"), ExtResource("2_3bvpw")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2s03d"]
_data = {
"RESET": SubResource("Animation_80uq6"),
"damaged": SubResource("Animation_fgv7d")
}

[sub_resource type="Animation" id="Animation_vbuvi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Overlay:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_3bvpw")]
}

[sub_resource type="Animation" id="Animation_kb0gx"]
resource_name = "claim"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("13_l7oc8"), null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Overlay:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_3bvpw"), ExtResource("6_ot5jj"), ExtResource("2_3bvpw"), ExtResource("6_ot5jj"), ExtResource("2_3bvpw"), ExtResource("6_ot5jj"), ExtResource("2_3bvpw"), ExtResource("6_ot5jj"), ExtResource("2_3bvpw"), ExtResource("6_ot5jj"), ExtResource("2_3bvpw"), ExtResource("6_ot5jj"), ExtResource("2_3bvpw"), ExtResource("6_ot5jj"), ExtResource("2_3bvpw"), ExtResource("2_3bvpw")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2pbj4"]
_data = {
"RESET": SubResource("Animation_vbuvi"),
"claim": SubResource("Animation_kb0gx")
}

[node name="Imp" type="Node2D"]
script = ExtResource("1_b2iwc")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_3bvpw")
texture = SubResource("AtlasTexture_5edl3")

[node name="Health" type="Node" parent="."]
script = ExtResource("4_jt7pj")

[node name="DamageTarget2D" type="Area2D" parent="." groups=["DamageTarget"]]
script = ExtResource("5_xqqjs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageTarget2D"]
shape = SubResource("RectangleShape2D_1e5q4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2s03d")
}

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("7_8s12j")
state = NodePath("SearchForMineTarget")

[node name="SearchForMineTarget" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("agent")]
script = ExtResource("8_34mra")
agent = NodePath("../..")

[node name="SearchForClaimTarget" type="Node" parent="FiniteStateMachine"]
script = ExtResource("12_tpm0u")

[node name="MoveToClaimTarget" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("agent")]
script = ExtResource("9_w8esl")
agent = NodePath("../..")

[node name="MoveToMineTarget" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("agent")]
script = ExtResource("11_heavk")
agent = NodePath("../..")

[node name="MoveNearby" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("agent")]
script = ExtResource("11_ob580")
agent = NodePath("../..")
movement_delay = 3.0

[node name="Claim" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("agent", "overlay_player")]
script = ExtResource("13_ykhsw")
agent = NodePath("../..")
overlay_player = NodePath("../../OverlayPlayer")

[node name="Mine" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("overlay_player", "mine_marker_ray_cast")]
script = ExtResource("13_rcxdl")
ground_source_id = Vector2i(5, 0)
overlay_player = NodePath("../../OverlayPlayer")
mine_marker_ray_cast = NodePath("../../MineMarkerRayCast2D")

[node name="FogOfWarRemover" type="Node2D" parent="."]
script = ExtResource("12_pwx5h")

[node name="Overlay" type="Sprite2D" parent="."]
material = ExtResource("2_3bvpw")

[node name="OverlayPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2pbj4")
}

[node name="MineMarkerRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[connection signal="died" from="Health" to="." method="die"]
[connection signal="damaged" from="DamageTarget2D" to="." method="_on_damage_target_2d_damaged"]
[connection signal="moved" from="FiniteStateMachine/MoveToClaimTarget" to="FogOfWarRemover" method="remove_fog_of_war"]
[connection signal="moved" from="FiniteStateMachine/MoveToMineTarget" to="FogOfWarRemover" method="remove_fog_of_war"]
[connection signal="moved" from="FiniteStateMachine/MoveNearby" to="FogOfWarRemover" method="remove_fog_of_war"]
[connection signal="gold_mined" from="FiniteStateMachine/Mine" to="." method="_on_mine_gold_mined"]
